@@ -1,6 +1,17 @@
 
    Changelog
 
+   __.__.2022, v2.17:
+
+   Bugfixes:
+   -  option renamekeyword: if the keyword was renamed multiple times it
+      did work only if the first occurance of this option was after an
+      instruction or directive that triggered "fastpass"; see renkeyw.asm.
+   -  option renamekeyword: keywords weren't restored to their default at
+      end of pass; see renkeyw2.asm.
+   -  option renamekeyword: renaming an already renamed keyword may have
+      caused an infinite loop; see renkeyw3.asm.
+
    14.11.2022, v2.16:
 
    Bugfixes:
